# simple-unit-converter

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  units.cpp  units.h
converter/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
converter/.cmake/api/v1/reply/: cache-v2-886eae3d6f19de9100ee.json  cache-v2-f46e030b40d300300847.json  cmakeFiles-v1-d69912a13c1b3768966b.json  codemodel-v2-800239e061630b008899.json  codemodel-v2-8c596af7d7b3601e29e3.json  index-2025-12-06T11-38-59-0667.json  target-Converter-Debug-5f4b63e7ec5fbdd82655.json  target-Converter-Debug-cd67ef64f72b9386863e.json  target-Converter_autogen-Debug-6b4de93a74432a9ed64d.json  target-Converter_autogen_timestamp_deps-Debug-ab0e168eb6280c9e26f3.json
converter/.cmake/api/v1/reply.prev/: cmakeFiles-v1-5b8a0af0a124916496c2.json  codemodel-v2-c4874d55269dd27b615b.json  index-2025-10-05T15-01-50-0445.json  index-2025-10-05T15-05-14-0448.json  target-Converter-Debug-1e9aee0f583f48e9e09e.json
converter/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
converter/Converter_autogen/: deps
converter/Converter_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
